--- a/api/qsharp/microsoft.quantum.intrinsic.exp.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.exp.yml
@@ -7,7 +7,7 @@ summary: >-
   应用多 qubit Pauli 运算符的幂。
 
 
-  \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是 $i 的 $ th 元素，其中 `paulis`= $ $N。`Length(paulis)`
+  \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是的 $i $ th 元素`paulis`，其中 $N = $`Length(paulis)`。
 syntax: 'operation Exp (paulis : Pauli[], theta : Double, qubits : Qubit[]) : Unit'
 input:
   content: '(paulis : Pauli[], theta : Double, qubits : Qubit[])'
@@ -35,9 +35,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: d301f6281d5c8a07479417fab1e25c66e2251a25
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d66b1b03a751be2629d2c363f538d9afa0310c73
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73067316"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683824"
