--- a/api/qsharp/microsoft.quantum.intrinsic.m.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.m.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Result
   types:
-  - summary: 如果观察到 $ + $1 eigenvalue，则 `Zero` `One` 是否观察到 $-$1 eigenvalue。
+  - summary: '`Zero`如果观察到 $ + $1 eigenvalue，并`One`观察到 $-$1 eigenvalue，则为。'
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: 842035790ecd03df97f9ad583b049121681b4f2b
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: e13f82aa3489fcd1d0c5121f436ae1f600675957
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234132"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683748"
