--- a/api/qsharp/microsoft.quantum.math.arcsin.yml
+++ b/api/qsharp/microsoft.quantum.math.arcsin.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.math.arcsin
 name: ArcSin
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 返回其正弦为指定数字的角度。
+summary: 返回正弦值为指定数字的角度。
 remarks: 有关更多详细信息，请参阅[Asin](https://docs.microsoft.com/dotnet/api/system.math.asin) 。
 syntax: 'function ArcSin (y : Double) : Double'
 input:
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: ee6dd6d6ffc66957116162dbe8286291d0c90599
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: b9c84604ee375de0825c939e429e1dbadebfcf77
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73221960"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683485"
