--- a/api/qsharp/microsoft.quantum.math.logof2.yml
+++ b/api/qsharp/microsoft.quantum.math.logof2.yml
@@ -11,13 +11,13 @@ input:
 output:
   content: Double
   types:
-  - summary: 返回 `Double` 等于 $ 0.6931471805599453 $。
+  - summary: 返回一个`Double`等于 $ 0.6931471805599453 $ 的。
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 4a2bbd6adff643a5240fd280a020be076190eed1
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 26efec659acda2d93921ef6789b56ff2493d4531
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73232500"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683295"
