--- a/api/qsharp/microsoft.quantum.intrinsic.r1frac.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.r1frac.yml
@@ -4,7 +4,7 @@ name: R1Frac
 type: operation
 namespace: Microsoft.Quantum.Intrinsic
 summary: >-
-  通过指定为 dyadic 分数的角度，对 $ \ket{1}$ 状态进行旋转。
+  通过指定为 dyadic 分数的角度{1}，将关于 $ \ket $ 状态的旋转。
 
 
   \begin{align} R_1 （n，k） \mathrel{： =} \operatorname{diag} （1，e ^ {i \pi k/2 ^ n}）。
@@ -14,7 +14,7 @@ summary: >-
 
   > [!WARNING]
 
-  > 此操作使用与 @"microsoft.quantum.intrinsic.r"**相反**的符号约定，不包括 @"microsoft.quantum.intrinsic.r1"包含 $ 1/2 $ 的因子。
+  > 此操作使用**相反**的符号约定@"microsoft.quantum.intrinsic.r"，不包括中的 $ 1/2 $ 的因子。 @"microsoft.quantum.intrinsic.r1"
 remarks: >-
   等效于：
 
@@ -51,9 +51,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: c91aa9424abd038fa3a5a22fd23ac92cce171414
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 45fa756e94be8b580c909004016e0f40861111c1
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233979"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683736"
