--- a/api/qsharp/microsoft.quantum.intrinsic.resetall.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.resetall.yml
@@ -9,7 +9,7 @@ input:
   content: '(qubits : Qubit[])'
   types:
   - name: qubits
-    summary: 其状态将重置为 $ \ket{0}$ 的一组 qubits。
+    summary: 其状态将重置为 $ \ket{0}$ 的 qubits 的数组。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -19,9 +19,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 99d3c4d8e8c109e9dc02447fc57fe13714ac1128
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 772e17c45a08698e4323c63344d1d8ca5be7926b
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73216503"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683709"
