--- a/api/qsharp/microsoft.quantum.logical.notequalr.yml
+++ b/api/qsharp/microsoft.quantum.logical.notequalr.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 不等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`不等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 3d1e7015676925f065ba6ed1c6e7cfeeb79de8cf
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6316d7dba38c97c32e8e3750f43e46fb8cf0c5df
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235186"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683593"
