--- a/api/qsharp/microsoft.quantum.logical.notnearlyequald.yml
+++ b/api/qsharp/microsoft.quantum.logical.notnearlyequald.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 不与 `b`几乎相等时，`true`。
+  - summary: '`true`当且仅当`a`不与几乎相等时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 4ecb51b9c2cea8637662960a7dac9c9a716663f7
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 021cec48888fba8bad1ec7b1ba47e668892fecff
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77909613"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683580"
